--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 			<img style="width:300px; height:300px; display: block; padding-top:50px; margin: 0 auto;" src="images/profile.png">
 
-			<p style="font-family:Helvetica,Arial,sans-serif; font-size:40px; color:#ffffff; text-align:center; margin :5px">
+			<p style="font-family:Helvetica,Arial,sans-serif; font-size:40px; color:#ffffff; text-align:center; margin:5px; padding-top:20px">
 			Vedran Arnautovic
 			</p>
 			
@@ -20,13 +20,13 @@
 			User Experience Designer <a style="color:white" target="_blank" href="https://twitter.com/seekjobs">@seekjobs</a>
 			<br>
 			<br>
-			Follow me <a style="color:white" target="_blank" href="https://twitter.com/ThatBaldUXGuy">@ThatBaldUXGuy</a> 
+			Follow me <a style="color:white; padding-top:20px" target="_blank" href="https://twitter.com/ThatBaldUXGuy">@ThatBaldUXGuy</a> 
 			</p>
 			
 		
 		</div>
 
-		<div style="width:100%; height:500px; background-color:#e0e0e0">
+		<div style="width:100%; height:450px; background-color:#e0e0e0">
 			<!-- This is the section for the paragraph talking about why this page looks so basic -->
 
 			<p style="font-family:Helvetica,Arial,sans-serif; font-size:40px; color:#404040; text-align:center; padding-top:60px; padding-bottom:20px; margin:0px">
@@ -38,15 +38,15 @@
 			<br><br>
 			Well, I used to have a shiny, fancy-pants Wordpress theme page, which looked great, but something about it just didn't feel right. Every time I wanted to tweak something, it was too hard. 
 			<br><br>
-			I decided to learn to write HTML, CSS and JavaScript from scratch. What you are seeing here are the very first baby steps I am taking in this journey. I could have kept my shiny Wordpress page up while I work on this, but I thought it's better this way - I wanted to get more comforbale showing something that is a work in progress, and hopefully get some feedback in the process.
+			I decided to learn to write HTML, CSS and JavaScript from scratch. What you are seeing here are the very first baby steps I am taking in this journey. 
 			<br><br>
-			I've written more about this in my blog. 
+			I've written more about this on <a style="color:#404040" target="_blank" href="https://medium.com/@ThatBaldUXGuy/so-im-learning-some-front-end-dev-fb9d5b4f8888">my blog</a>
 			</p>
 
 		
 		</div>
 
-		<div style="width:100%; height:500px; background-color:#ffffff">
+		<div style="width:100%; height:450px; background-color:#ffffff">
 			
 
 			<p style="font-family:Helvetica,Arial,sans-serif; font-size:40px; color:#404040; text-align:center; padding-top:60px; padding-bottom:20px; margin:0px">
@@ -56,15 +56,15 @@
 			<p style="font-family:Helvetica,Arial,sans-serif; font-size:18px; color:#404040; text-align:left; margin-left :20%; margin-right :20%">
 			Currently, I am working as a senior UX designer at Seek.com.au.
 			<br><br>
-			More specifically, I am working on the advertiser side of the business, building products hirers and recruiters use in sourcing top talent.
+			More specifically, I am working on the advertiser side of the business, building products hirers and recruiters use in sourcing talent.
 			<br><br>
-			Day to day, I am working closely with two agile teams and a couple of product managers. My work is a combination of forward looking activities (user research and journey mapping for future products on our roadmap), tactical delivery (designing user flows and interfaces for the projects I am currently working on) as well as contributing to the improvement of processes and the way we design at Seek (e.g. defining a style guide).
+			Day to day, I work closely with two agile teams and a couple of product managers. My work is a combination of forward looking activities (user research and journey mapping for future products on our roadmap), tactical delivery (designing and testing user flows and interfaces for the projects I am currently working on) as well as contributing to the improvement of processes and the way we design at Seek (e.g. defining a style guide).
 			</p>
 
 		
 		</div>
 
-		<div style="width:100%; height:500px; background-color:#323232">
+		<div style="width:100%; height:450px; background-color:#323232">
 			
 
 			<p style="font-family:Helvetica,Arial,sans-serif; font-size:40px; color:white; text-align:center; padding-top:60px; padding-bottom:20px; margin:0px">
@@ -72,7 +72,7 @@
 			</p>
 
 			<p style="font-family:Helvetica,Arial,sans-serif; font-size:18px; color:white; text-align:left; margin-left :20%; margin-right :20%">
-			I'm not going to add more to this site for now, as it is getting ineficient.
+			I'm not going to add more to this site for now, as it is getting inefficient.
 			<br><br>
 			You see, I haven't yet done the lessons on CSS and I am aware that the way I am writing my HTML code is very inefficient (and old-school), so I will take a break until I learn a bit more...
 			</p>
