--- a/index.html
+++ b/index.html
@@ -2,79 +2,80 @@
 <html>
 	<head>
 		<title>Vedran Arnautovic</title>
+		<link rel="stylesheet" type="text/css" href="homepage.css">
 	</head>
 	
 	<body>
 	
-		<div style="width:100%; height:540px; background-color:#3370A7">
+		<div id="header_block">
 
 			<!-- This is the page header containing profile image, name and title -->
 
-			<img style="width:300px; height:300px; display: block; padding-top:50px; margin: 0 auto;" src="images/profile.png">
+			<img id="header_profile_image" src="images/profile.png">
 
-			<p style="font-family:Helvetica,Arial,sans-serif; font-size:40px; color:#ffffff; text-align:center; margin:5px; padding-top:20px">
-			Vedran Arnautovic
+			<p id="header_name">
+				Vedran Arnautovic
 			</p>
 			
-			<p style="font-family:Helvetica,Arial,sans-serif; font-size:20px; color:#ffffff; text-align:center; margin :0">
-			User Experience Designer <a style="color:white" target="_blank" href="https://twitter.com/seekjobs">@seekjobs</a>
-			<br>
-			<br>
-			Follow me <a style="color:white; padding-top:20px" target="_blank" href="https://twitter.com/ThatBaldUXGuy">@ThatBaldUXGuy</a> 
+			<p id="header_job_title">
+				User Experience Designer <a class="light_link" title="Open Twitter in new tab" target="_blank" href="https://twitter.com/seekjobs">@seekjobs</a>
+				<br>
+				<br>
+				Follow me <a class="light_link" target="_blank" title="Open Twitter in new tab" href="https://twitter.com/ThatBaldUXGuy">@ThatBaldUXGuy</a> 
 			</p>
 			
 		
 		</div>
 
-		<div style="width:100%; height:450px; background-color:#e0e0e0">
+		<div id="intro_block">
 			<!-- This is the section for the paragraph talking about why this page looks so basic -->
 
-			<p style="font-family:Helvetica,Arial,sans-serif; font-size:40px; color:#404040; text-align:center; padding-top:60px; padding-bottom:20px; margin:0px">
-			Why does this page look so shit?
+			<p class="section_heading">
+				Why does this page look so shit?
 			</p>
 
-			<p style="font-family:Helvetica,Arial,sans-serif; font-size:18px; color:#404040; text-align:left; margin-left :20%; margin-right :20%">
-			So you're thinking <em>'You are a designer, why does this page look so shit?'</em>. 
-			<br><br>
-			Well, I used to have a shiny, fancy-pants Wordpress theme page, which looked great, but something about it just didn't feel right. Every time I wanted to tweak something, it was too hard. 
-			<br><br>
-			I decided to learn to write HTML, CSS and JavaScript from scratch. What you are seeing here are the very first baby steps I am taking in this journey. 
-			<br><br>
-			I've written more about this on <a style="color:#404040" target="_blank" href="https://medium.com/@ThatBaldUXGuy/so-im-learning-some-front-end-dev-fb9d5b4f8888">my blog</a>
-			</p>
-
-		
-		</div>
-
-		<div style="width:100%; height:450px; background-color:#ffffff">
-			
-
-			<p style="font-family:Helvetica,Arial,sans-serif; font-size:40px; color:#404040; text-align:center; padding-top:60px; padding-bottom:20px; margin:0px">
-			Current work
-			</p>
-
-			<p style="font-family:Helvetica,Arial,sans-serif; font-size:18px; color:#404040; text-align:left; margin-left :20%; margin-right :20%">
-			Currently, I am working as a senior UX designer at Seek.com.au.
-			<br><br>
-			More specifically, I am working on the advertiser side of the business, building products hirers and recruiters use in sourcing talent.
-			<br><br>
-			Day to day, I work closely with two agile teams and a couple of product managers. My work is a combination of forward looking activities (user research and journey mapping for future products on our roadmap), tactical delivery (designing and testing user flows and interfaces for the projects I am currently working on) as well as contributing to the improvement of processes and the way we design at Seek (e.g. defining a style guide).
+			<p class="section_paragraph">
+				So you're thinking <em>'You are a designer, why does this page look so shit?'</em>. 
+				<br><br>
+				Well, I used to have a shiny, fancy-pants Wordpress theme page, which looked great, but something about it just didn't feel right. Every time I wanted to tweak something, it was too hard. 
+				<br><br>
+				I decided to learn to write HTML, CSS and JavaScript from scratch. What you are seeing here are the very first baby steps I am taking in this journey. 
+				<br><br>
+				I've written more about this on <a class="dark_link" target="_blank" title="Open Medium in a new tab" href="https://medium.com/@ThatBaldUXGuy/so-im-learning-some-front-end-dev-fb9d5b4f8888">my blog</a>
 			</p>
 
 		
 		</div>
 
-		<div style="width:100%; height:450px; background-color:#323232">
+		<div id="current_work_block">
 			
 
-			<p style="font-family:Helvetica,Arial,sans-serif; font-size:40px; color:white; text-align:center; padding-top:60px; padding-bottom:20px; margin:0px">
-			I'm going to stop here for now...
+			<p class="section_heading">
+				Current work
 			</p>
 
-			<p style="font-family:Helvetica,Arial,sans-serif; font-size:18px; color:white; text-align:left; margin-left :20%; margin-right :20%">
-			I'm not going to add more to this site for now, as it is getting inefficient.
-			<br><br>
-			You see, I haven't yet done the lessons on CSS and I am aware that the way I am writing my HTML code is very inefficient (and old-school), so I will take a break until I learn a bit more...
+			<p class="section_paragraph">
+				Currently, I am working as a senior UX designer at Seek.com.au.
+				<br><br>
+				More specifically, I am working on the advertiser side of the business, building products hirers and recruiters use in sourcing talent.
+				<br><br>
+				Day to day, I work closely with two agile teams and a couple of product managers. My work is a combination of forward looking activities (user research and journey mapping for future products on our roadmap), tactical delivery (designing and testing user flows and interfaces for the projects I am currently working on) as well as contributing to the improvement of processes and the way we design at Seek (e.g. defining a style guide).
+			</p>
+
+		
+		</div>
+
+		<div id="wrap_up_block">
+			
+
+			<p class="section_heading">
+				I'm going to stop here for now...
+			</p>
+
+			<p class="section_paragraph">
+				Right, I've just re-styled the webpage using CSS - that was fun!
+				<br><br>
+				Now that I know how to style the page more efficiently, it's time to start adding more content...and that's coming up soon.
 			</p>
 
 		
