fixed the styling on twitter links
the @ symbol is no longer part of the link - it looked crap when
underlined

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 			</p>
 			
 			<p id="header_job_title">
-				User Experience Designer <a class="light_link" title="Open Twitter in new tab" target="_blank" href="https://twitter.com/seekjobs">@seekjobs</a>
+				User Experience Designer @<a class="light_link" title="Open Twitter in new tab" target="_blank" href="https://twitter.com/seekjobs">seekjobs</a>
 				<br>
 				<br>
-				Follow me <a class="light_link" target="_blank" title="Open Twitter in new tab" href="https://twitter.com/ThatBaldUXGuy">@ThatBaldUXGuy</a> 
+				Follow me @<a class="light_link" target="_blank" title="Open Twitter in new tab" href="https://twitter.com/ThatBaldUXGuy">ThatBaldUXGuy</a> 
 			</p>
 			
 		
