--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Vedran Arnautovic</title>
 		<link rel="stylesheet" type="text/css" href="homepage.css">
+		<link href='http://fonts.googleapis.com/css?family=Lobster|Roboto+Slab|Roboto:300' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 	</head>
 	
 	<body>
@@ -36,12 +38,15 @@
 
 			<p class="section_paragraph">
 				So you're thinking <em>'You are a designer, why does this page look so shit?'</em>. 
-				<br><br>
+			</p>
+			<p class="section_paragraph">
 				Well, I used to have a shiny, fancy-pants Wordpress theme page, which looked great, but something about it just didn't feel right. Every time I wanted to tweak something, it was too hard. 
-				<br><br>
+			</p>
+			<p class="section_paragraph">
 				I decided to learn to write HTML, CSS and JavaScript from scratch. What you are seeing here are the very first baby steps I am taking in this journey. 
-				<br><br>
-				I've written more about this on <a class="dark_link" target="_blank" title="Open Medium in a new tab" href="https://medium.com/@ThatBaldUXGuy/so-im-learning-some-front-end-dev-fb9d5b4f8888">my blog</a>
+			</p>
+			<p class="section_paragraph">				
+				I've written more about this on <a class="dark_link" target="_blank" title="Open Medium in a new tab" href="https://medium.com/@ThatBaldUXGuy/so-im-learning-some-front-end-dev-fb9d5b4f8888">my blog</a>.
 			</p>
 
 		
@@ -56,9 +61,11 @@
 
 			<p class="section_paragraph">
 				Currently, I am working as a senior UX designer at Seek.com.au.
-				<br><br>
+			</p>
+			<p class="section_paragraph">
 				More specifically, I am working on the advertiser side of the business, building products hirers and recruiters use in sourcing talent.
-				<br><br>
+			</p>
+			<p class="section_paragraph">
 				Day to day, I work closely with two agile teams and a couple of product managers. My work is a combination of forward looking activities (user research and journey mapping for future products on our roadmap), tactical delivery (designing and testing user flows and interfaces for the projects I am currently working on) as well as contributing to the improvement of processes and the way we design at Seek (e.g. defining a style guide).
 			</p>
 
@@ -69,13 +76,14 @@
 			
 
 			<p class="section_heading">
-				I'm going to stop here for now...
+				Progress!
 			</p>
 
 			<p class="section_paragraph">
-				Right, I've just re-styled the webpage using CSS - that was fun!
-				<br><br>
-				Now that I know how to style the page more efficiently, it's time to start adding more content...and that's coming up soon.
+				It doesn't look like much, but I've actually made a bit of progress.
+			</p>
+			<p class="section_paragraph">
+				The whole page is now styled using CSS. I have also learnt how to use Google web fonts (easy). The biggest achievement has been setting the whole page to a 30px baseline grid, to achieve vertical rythm. Turns out, this is a bit tricky using CSS.
 			</p>
 
 		
