Additional grid lines, web fonts
Added an additional baseline grid line at 15px (commented out)
Fixed the issue with loading of web fonts

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Vedran Arnautovic</title>
+		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="homepage.css">
 		<link href='http://fonts.googleapis.com/css?family=Lobster|Roboto+Slab|Roboto:300' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 	</head>
 	
 	<body>
@@ -38,8 +38,6 @@
 
 			<p class="section_paragraph">
 				So you're thinking <em>'You are a designer, why does this page look so shit?'</em>. 
-			</p>
-			<p class="section_paragraph">
 				Well, I used to have a shiny, fancy-pants Wordpress theme page, which looked great, but something about it just didn't feel right. Every time I wanted to tweak something, it was too hard. 
 			</p>
 			<p class="section_paragraph">
@@ -61,8 +59,6 @@
 
 			<p class="section_paragraph">
 				Currently, I am working as a senior UX designer at Seek.com.au.
-			</p>
-			<p class="section_paragraph">
 				More specifically, I am working on the advertiser side of the business, building products hirers and recruiters use in sourcing talent.
 			</p>
 			<p class="section_paragraph">
