--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Vedran Arnautovic</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="homepage.css">
-		<link href='http://fonts.googleapis.com/css?family=Lobster|Roboto+Slab|Roboto:300' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Lobster|Roboto+Slab:300|Roboto:300' rel='stylesheet' type='text/css'>
 	</head>
 	
 	<body>
@@ -29,7 +29,7 @@
 		
 		</div>
 
-		<div id="intro_block">
+		<div class="dark_block">
 			<!-- This is the section for the paragraph talking about why this page looks so basic -->
 
 			<p class="section_heading">
@@ -50,7 +50,7 @@
 		
 		</div>
 
-		<div id="current_work_block">
+		<div class="light_block">
 			
 
 			<p class="section_heading">
@@ -68,7 +68,7 @@
 		
 		</div>
 
-		<div id="wrap_up_block">
+		<div class="dark_block">
 			
 
 			<p class="section_heading">
