--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				It doesn't look like much, but I've actually made a bit of progress. Here is a list of things I've learnt and implemented so far, since the start of December 2014:
 			</p>
 			<p class="section_paragraph">
-				<ul class="unordered_list">
+				<ul class="section_paragraph , unordered_list">
 					<li>The whole page is now styled using CSS</li>
 					<li>I have also learnt how to use Google web fonts (easy)</li>
 					<li>The biggest achievement has been setting the whole page to a 30px baseline grid, to achieve vertical rythm. Turns out, this is a bit tricky using CSS</li>
