Adding a CNAM file to redirect to GitHub hosting

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
+
+	<script>document.write('<script src="http://' + (location.host || 'localhost')
+.split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 	
 	<body>
 	
@@ -78,7 +81,7 @@
 			</p>
 
 			<p class="section_paragraph">
-				It doesn't look like much, but I've actually made a bit of progress. Here is a list of things I've learnt and implemented so far, since the start of December 2014:
+				It doesn't look like much, but I've actually made a bit of progress. Here is a list of things I've learnt and implemented since the start of December 2014:
 			</p>
 			<p class="section_paragraph">
 				<ul class="section_paragraph , unordered_list">
