responsive design done

--- a/dear-pete/index.html
+++ b/dear-pete/index.html
@@ -21,8 +21,7 @@
     </div>
     <br>
     <div id="message">
-      <p>I know you'll miss me, but rest assured, I won't be gone for long.</p>
-      <p>I'll be back in...</p>
+      <p>I know you'll miss me, but rest assured, I'll be back in...</p>
     </div>
     <br>
 <div id="clockdiv">
