Moving src to root

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>	
 	<body>
 		<div class="wip-message__banner">
-			<p class="wip-message__text">Work in progress. Read about <a class ="wip-message__link link--on-light-bg" target="_blank" href="https://medium.com/@ThatBaldUXGuy/so-im-learning-some-front-end-dev-fb9d5b4f8888#.50tdj7v4p">what I'm doing with this site</a>.</p>
+			<p class="wip-message__text">IN PROGRESS! Read about <a class ="wip-message__link link--on-light-bg" target="_blank" href="https://medium.com/@ThatBaldUXGuy/so-im-learning-some-front-end-dev-fb9d5b4f8888#.50tdj7v4p">what I'm doing with this site</a>.</p>
 		</div>
 		<div class="headshot">
 			<div class="headshot__image"></div>
