--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Vedran Arnautovic</title>
+		<title>Vedran Arnautovic User Experience Designer in Melbourne</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
@@ -9,9 +9,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>	
 	<body>
-		<div class="wip-message__banner">
-			<p class="wip-message__text">IN PROGRESS! Read about <a class ="wip-message__link link--on-light-bg" target="_blank" href="https://medium.com/@ThatBaldUXGuy/so-im-learning-some-front-end-dev-fb9d5b4f8888#.50tdj7v4p">what I'm doing with this site</a>.</p>
-		</div>
 		<div class="headshot">
 			<div class="headshot__image"></div>
 		</div>
@@ -21,191 +18,44 @@
 				<h1 class="section-heading">Hello, I'm Vedran</h1>
 				<p>I am designer.</p>
 				<p>I design digital products, the way people experience them and interact with them.</p>
-				<a class ="link link--on-dark-bg" href="about.html">More about me</a>
+				<a class ="link link--on-dark-bg" href="about_me.html">More about me</a>
 			</diblock__contentv>
 		</div>
-		<!-- CAREER -->
-		<div class="block block--light">
+		<!-- CASE STUDIES & DESIGN SNIPPETS -->
+		<div class="block block--light block--first-in-section">
 			<div class="block__content">
-				<h2 class="section-heading">Career</h2>
-				<div class="career-item">
-					<h3 class="sub-heading">Now</h3>
-					<p>Senior UX Designer<br>SEEK</p>
-				</div>
-				<div class="career-item">
-					<h3 class="sub-heading">Before</h3>
-					<p>Consultant (CX / UX / BA)<br>SMS M&T</p>
-				</div>
-
-				<a class ="link link--on-light-bg" href="career.html">View full career history</a>
+				<h2 class="section-heading">Case studies</h2>
+					<p>Comprehensive case studies and short design snippets, showing my design process on real projects.</p>
+				<a class ="link link--on-light-bg" href="my_work.html">View my design work</a>
 			</div>
 		</div>
-
-
-		<!-- CASE STUDIES -->
-		<div class="block block--dark">
-			<div class="block__content">
-				<h2 class="section-heading">Case studies</h2>				
-				<p>A selection of comprehensive case studies, showing real projects. Even those that failed.</p>
-			</div>
-		</div>
-		<!-- CASE STUDY 1 -->
-		<div class="block block--light">
-			<div class="block__image block__image--credit-card">
-				<h3 class="sub-heading block__sub-heading-on-image">Case study 1: <br>Credit card checkout</h3>		
-			</div>
-		</div>
-		<div class="block block--light">
-			<div class="block__content">
-				<p>I designed the long overdue improvement to SEEK’s credit card checkout process. As a result, payments by card jumped from 13% to 73%.</p>
-				<a class ="link link--on-light-bg" href="case-study__credit-card.html">Read full case study</a>
-			</div>
-		</div>
-		<!-- CASE STUDY 2 -->
-		<div class="block block--light">
-			<div class="block__image block__image--credit-card">
-				<h3 class="sub-heading block__sub-heading-on-image">Case study 2: <br>Role requirements</h3>		
-			</div>
-		</div>
-		<div class="block block--light">
-			<div class="block__content">
-				<p>A product allowing employers to quickly screen potential employees and identify the ones worth interviewing.</p>
-				<a class ="link link--on-light-bg" href="case-study__role-requirements.html">Read full case study</a>
-				<a class ="link link--on-light-bg" href="case-studies.html">Browse all 4 case studies</a>
-			</div>
-		</div>
-
-
 		<!-- SIDE PROJECTS -->
-		<div class="block block--black">
-			<div class="block__content">
-				<h2 class="section-heading">Side projects</h2>				
-				<p>A selection of past and present projects, worked on out of love for design, continued learning and self development.</p>
-			</div>
-		</div>
-		<!-- SIDE PROJECT 1 -->
-		<div class="block block--medium">
-			<div class="block__content">
-				<div class="project">
-					<img class="project__logo" src="images/walnut-logo.png" alt="Walnut Art logo">
-					<h2 class="project__name">Walnut Art</h2>
-					<h3 class="project__type">iOS app & website</h3>
-					<p class="project__description">An iOS app that lets you visualise how an artwork will look in your room.</p>
-				</div>
-				<a class ="link link--on-light-bg" href="www.walnut-art.com">Live site</a>
-				<a class ="link link--on-light-bg" href="side-project__walnut-art.html">About the process</a>
-			</div>
-		</div>
-		<!-- SIDE PROJECT 2 -->
 		<div class="block block--light">
 			<div class="block__content">
-				<div class="project">
-					<img class="project__logo" src="images/minty-ninja-logo.png" alt="Minty Ninja logo">
-					<h2 class="project__name">Minty Ninja</h2>
-					<h3 class="project__type">Web app & service</h3>
-					<p class="project__description">A service that takes the awkwardness out of the ‘you have bad breath’ conversation.</p>
-				</div>
-				<a class ="link link--on-light-bg" href="www.minty.ninja">Live site</a>
-				<a class ="link link--on-light-bg" href="side-project__minty-ninja.html">About the process</a>
+				<h2 class="section-heading">Side projects</h2>
+					<p>Things I do out of passion for design, continued learning and self development.</p>
+				<a class ="link link--on-light-bg" href="my_work.html">View my side projects</a>
 			</div>
 		</div>
-		<!-- SIDE PROJECT 3 -->
-		<div class="block block--medium">
-			<div class="block__content">
-				<div class="project">
-					<img class="project__logo" src="images/accessible-colors-logo.png" alt="Accessible Colors logo">
-					<h2 class="project__name">Accessible Colors</h2>
-					<h3 class="project__type">Web app</h3>
-					<p class="project__description">A web app that finds the closest accessible colour combination, given a text & background colour.</p>
-				</div>
-				<a class ="link link--on-light-bg" href="www.accessible-colors.com">Live site</a>
-				<a class ="link link--on-light-bg" href="side-project__accessible-colors.html">About the process</a>
-			</div>
-		</div>
-
-
 		<!-- WRITING -->
-		<div class="block block--dark">
-			<div class="block__content">
-				<h2 class="section-heading">Writing</h2>				
-				<p>I write for many reasons. To question my own thoughts, to share knowledge, to create dialogue and because I enjoy it.</p>
-			</div>
-		</div>
 		<div class="block block--light">
 			<div class="block__content">
-				<div class="link--list">
-					<a class ="link link--on-light-bg" target="_blank" href="https://medium.com/seek-user-experience/4-simple-steps-to-improve-your-ui-sketches-4ad2f1433373#.7orh3y4d3">Four simple steps to improve your UI sketches</a>
-					<a class ="link link--on-light-bg" target="_blank" href="https://medium.com/seek-user-experience/using-design-sprint-to-accelerate-innovation-part-i-of-ii-f643ad42cf60#.ct6y3hfbf">Using Design Sprints to accelerate innovation</a>
-					<a class ="link link--on-light-bg" target="_blank" href="https://medium.com/@ThatBaldUXGuy/i-ride-a-fixie-out-of-design-principles-c046a2382e53#.6svxajsf0">I ride a fixie out of (design) principle</a>
-				</div>
-				<a class ="link link--on-light-bg" target="_blank" href="https://medium.com/@ThatBaldUXGuy">View all of my posts on Medium</a>
-			</p>
+				<h2 class="section-heading">Writing</h2>
+					<p>Things I do out of passion for design, continued learning and self development.</p>
+				<a class ="link link--on-light-bg" href="http://medium.com/@ThatBaldUXGuy" target="_blank">Read my posts on Medium</a>
+			</div>
+		</div>
+		<!-- DESIGN COMMUNITY -->
+		<div class="block block--light block--last-in-section">
+			<div class="block__content">
+				<h2 class="section-heading">Design community</h2>
+					<p>I love sharing ideas and getting involved with the local design community.</p>
+				<a class ="link link--on-light-bg" href="http://www.slideshare.net/ThatBaldUXGuy/presentations" target="_blank">View my presentations on SlideShare</a>
 			</div>
 		</div>
 
 
-		<!-- PRESENTING -->
-		<div class="block block--dark">
-			<div class="block__content">
-				<h2 class="section-heading">Presenting</h2>				
-				<p>I love sharing ideas and getting involved with the local design comunity.</p>
-			</div>
-		</div>
-		<div class="block block--light">
-			<div class="block__content">
-				<div class="link--list">
-					<a class ="link link--on-light-bg" target="_blank" href="http://www.slideshare.net/ThatBaldUXGuy/collaborating-with-design-studio-method">An introduction to the Design Studio method (workshop)</a>
-					<a class ="link link--on-light-bg" target="_blank" href="http://www.slideshare.net/ThatBaldUXGuy/using-design-sprint-to-accelerate-innovation">Using Design Sprints to accelerate innovation</a>
-					<a class ="link link--on-light-bg" target="_blank" href="http://www.slideshare.net/ThatBaldUXGuy/responsive-new-ad-centre">Implementing our responsive Advertiser Centre</a>
-				</div>
-					<a class ="link link--on-light-bg" target="_blank" href="http://www.slideshare.net/ThatBaldUXGuy">My presentations on SlideShare</a>
-			</div>
-		</div>
-
-
-		<!-- OPEN SOURCE -->
-		<div class="block block--dark">
-			<div class="block__content">
-				<h2 class="section-heading">Open source</h2>				
-				<p>I'm a big fan of the open source movement. Below are some of my contributions.</p>
-			</div>
-		</div>
-		<!-- OPEN SOURCE PROJECT 1 -->
-		<div class="block block--light">
-			<div class="block__image block__image--credit-card">
-				<h3 class="sub-heading block__sub-heading-on-image">Material Design interaction library<br>framer.js</h3>		
-			</div>
-		</div>
-		<div class="block block--light">
-			<div class="block__content">
-				<p>A framer.js library of standard Google Material Design interactions.</p>
-				<a class ="link link--on-light-bg" href="https://github.com/ThatBaldUXGuy/Material-Design-Interactions">Get from GitHub</a>
-			</div>
-		</div>
-		<!-- OPEN SOURCE PROJECT 2 -->
-		<div class="block block--light">
-			<div class="block__image block__image--credit-card">
-				<h3 class="sub-heading block__sub-heading-on-image">SEEK UI Kit<br>Sketch</h3>		
-			</div>
-		</div>
-		<div class="block block--light">
-			<div class="block__content">
-				<p>A Sketch template containing common SEEK UI components, layout, colours and typography.</p>
-				<a class ="link link--on-light-bg" href="https://github.com/SEEK-Jobs/style-guide-resources-for-sketch">Get from GitHub</a>
-			</div>
-		</div>
-		<!-- OPEN SOURCE PROJECT 3 -->
-		<div class="block block--light">
-			<div class="block__image block__image--credit-card">
-				<h3 class="sub-heading block__sub-heading-on-image">Float label pattern<br>Axure</h3>		
-			</div>
-		</div>
-		<div class="block block--light">
-			<div class="block__content">
-				<p>An Axure implementation of the float label input field pattern as defined in Google's Material Design</p>
-				<a class ="link link--on-light-bg" href="#">Get from GitHub</a>
-			</div>
-		</div>
+		
 
 
 		<!-- FOOTER -->
