First go at responsive header and updates to about page

--- a/about_me.html
+++ b/about_me.html
@@ -10,22 +10,23 @@
 	</head>	
 	<body>
 		<!-- ABOUT ME -->
-		<div class="block block--light block--first-in-section">
-			<div class="block__content">
+		<div class="block block--light">
+			<div class="block__content block__content--allow-wide">
 				<h1 class="section-heading">About me</h1>
 					<p>I am a designer with over 10 years' experience, focusing on User Experience (UX) design, usability and interface design.</p> 
 					<p>I am currently working as a Senior UX Designer at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://seek.com.au">Seek</a>.</p>
 
 			</div>
 		</div>
-		<div class="about__image"></div>
+		<img class="image--full-width" src="/images/vedran_speaking_at_meetup.jpg" alt="Vedran speaking at Sarajevo UX meetup"/>
 
 		<div class="block block--light">
-			<div class="block__content">
+			<div class="block__content block__content--allow-wide">
 					<h2 class="sub-heading">Technical beginnings</h2>
 
-					<p>After graduating from Engineering Design (robotics) and Computer Science in 2004, I started my career as a system design engineer working on automated cancer diagnostics instruments. I developed a passion for observing how people interact with the machines, systems and software I worked on. </p>
-
+					<p>After graduating from Engineering (robotics) and Computer Science in 2004, I started my career as a system design engineer working on automated cancer diagnostics instruments. I developed a passion for observing how people interact with the machines, systems and software I worked on. </p>
+			</div>
+			<div class="block__content block__content--allow-wide block--last-in-section">
 					<h2 class="sub-heading">A turning point</h2>
 
 					<p>A career shaping event was an opportunity to spend two years working in the UK and across Europe, studying how medical staff use our instruments and helping them improve their processes.</p>
