--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>	
 	<body>
-		<div class="headshot">
-			<div class="headshot__image"></div>
-		</div>
-		<!-- INTRO -->
-		<div class="block block--dark">
-			<div class="block__content">
-				<h1 class="section-heading">Hello, I'm Vedran</h1>
-				<p>I am designer.</p>
-				<p>I design digital products, the way people experience them and interact with them.</p>
-				<a class ="link link--on-dark-bg" href="about_me.html">More about me</a>
-			</diblock__contentv>
+		<div class="header">
+			<div class="header__image"></div>
+		
+			<!-- INTRO -->
+			<div class="intro">
+				<div class="intro__content">
+					<h1 class="section-heading">Hello, I'm Vedran</h1>
+					<p>I am designer.</p>
+					<p>I design digital products, the way people experience them and interact with them.</p>
+					<a class ="link link__about-me" href="about_me.html">More about me</a>
+				</div>
+			</div>
 		</div>
 		<!-- CASE STUDIES & DESIGN SNIPPETS -->
 		<div class="block block--light block--first-in-section">
@@ -42,7 +43,7 @@
 			<div class="block__content">
 				<h2 class="section-heading">Writing</h2>
 					<p>Things I do out of passion for design, continued learning and self development.</p>
-				<a class ="link link--on-light-bg" href="http://medium.com/@ThatBaldUXGuy" target="_blank">Read my posts on Medium</a>
+				<a class ="link link--on-light-bg" href="http://medium.com/@ThatBaldUXGuy" target="b">Read my posts on Medium</a>
 			</div>
 		</div>
 		<!-- DESIGN COMMUNITY -->
