another refinement of content for home page and about page

--- a/about_me.html
+++ b/about_me.html
@@ -10,28 +10,38 @@
 	</head>	
 	<body>
 		<!-- ABOUT ME -->
-		<div class="block block--light">
-			<div class="block__content block__content--allow-wide">
+		<div class="section section--light">
+			<div class="section__content section__content--allow-wide">
 				<h1 class="section-heading">About me</h1>
-					<p>I am a designer with over 10 years' experience, focusing on User Experience (UX) design, usability and interface design.</p> 
+					<p>I am a designer with over 10 years’ experience, focusing on user experience design, usability and interface design.</p> 
 					<p>I am currently working as a Senior UX Designer at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://seek.com.au">Seek</a>.</p>
 
 			</div>
 		</div>
 		<img class="image--full-width" src="/images/vedran_speaking_at_meetup.jpg" alt="Vedran speaking at Sarajevo UX meetup"/>
 
-		<div class="block block--light">
-			<div class="block__content block__content--allow-wide">
+		<div class="section section--light section__content--allow-wide">
+			<div class="sub-section__content sub-section--first-in-section">
 					<h2 class="sub-heading">Technical beginnings</h2>
 
-					<p>After graduating from Engineering (robotics) and Computer Science in 2004, I started my career as a system design engineer working on automated cancer diagnostics instruments. I developed a passion for observing how people interact with the machines, systems and software I worked on. </p>
+					<p>After graduating from Engineering (robotics) and Computer Science in 2004, I started my career as a System Design Engineer working on automated cancer diagnostics instruments. I developed a passion for observing how people interact with the machines, systems and software I designed. </p>
 			</div>
-			<div class="block__content block__content--allow-wide block--last-in-section">
+			<div class="sub-section__content">
 					<h2 class="sub-heading">A turning point</h2>
 
-					<p>A career shaping event was an opportunity to spend two years working in the UK and across Europe, studying how medical staff use our instruments and helping them improve their processes.</p>
+					<p>A career shaping event was an opportunity to spend two years working in the UK and across Europe, studying how medical staff use cancer diagnostic instruments and helping them improve their processes.</p>
 					
-					<p>That was in 2006. That passion for observing how people interact with products and improving their experiences lives on in me and is the key reason why I love what I do.</p>
+					<p>That was in 2006. That passion for observing how people interact with products and using those observations to design better experiences, lives on in me and is the key reason why I love what I do.</p>
+
+			</div>
+			<div class="sub-section__content sub-section--last-in-section">
+					<h2 class="sub-heading">My focus today</h2>
+
+					<p>I am more and more interested in effects of cognitive psychology on users’ interaction with products.</p>
+					
+					<p>I am also focused on continually evolving my design process, both individually and within the teams I work with.</p>
+
+					<p>I evangelise for use of modern design tools, colaborative design practices and early and continued involvement of users in the design process.</p>
 
 			</div>
 		</div>
@@ -41,15 +51,14 @@
 
 
 		<!-- FOOTER -->
-		<div class="block block--dark">
-			<div class="block__content">
-				<h2 class="section-heading">Get in touch</h2>				
+		<div class="footer section--dark footer__content">
+			<div class="section__content section__content--allow-wide">
 				<p>
-					<a class ="link link--on-dark-bg" target="_blank" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>
-					<a class ="link link--on-dark-bg" target="_blank" href="https://medium.com/@ThatBaldUXGuy">Medium</a>
-					<a class ="link link--on-dark-bg" target="_blank" href="https://github.com/ThatBaldUXGuy">GitHub</a>
-					<a class ="link link--on-dark-bg" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
-					<a class ="link link--on-dark-bg" href="mailto:vedran.arnautovic@gmail.com">Email</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@ThatBaldUXGuy">Medium</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/ThatBaldUXGuy">GitHub</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
+					<a class ="link link--on-dark-bg link__footer" href="mailto:vedran.arnautovic@gmail.com">Email</a>
 				</p>
 			</div>
 		</div>
