--- a/index.html
+++ b/index.html
@@ -17,40 +17,33 @@
 				<div class="intro__content">
 					<h1 class="section-heading">Hello, I'm Vedran</h1>
 					<p>I am designer.</p>
-					<p>I design digital products, the way people experience them and interact with them.</p>
+					<p>I design digital products and the way people experience them and interact with them.</p>
 					<a class ="link link__about-me" href="about_me.html">More about me</a>
 				</div>
 			</div>
 		</div>
-		<!-- CASE STUDIES & DESIGN SNIPPETS -->
-		<div class="block block--light block--first-in-section">
-			<div class="block__content">
-				<h2 class="section-heading">Case studies</h2>
-					<p>Comprehensive case studies and short design snippets, showing my design process on real projects.</p>
+		<!-- MY WORK -->
+		<div class="section section--light section--first-in-section">
+			<div class="section__content">
+				<h2 class="section-heading">My work</h2>
+					<p>Here you will find two things; a collection of case studies focusing on my design process, and side projects I do out of love of design and passion for continued learning and self development.</p>
 				<a class ="link link--on-light-bg" href="my_work.html">View my design work</a>
 			</div>
 		</div>
-		<!-- SIDE PROJECTS -->
-		<div class="block block--light">
-			<div class="block__content">
-				<h2 class="section-heading">Side projects</h2>
-					<p>Things I do out of passion for design, continued learning and self development.</p>
-				<a class ="link link--on-light-bg" href="my_work.html">View my side projects</a>
-			</div>
-		</div>
 		<!-- WRITING -->
-		<div class="block block--light">
-			<div class="block__content">
+		<div class="section section--light">
+			<div class="section__content">
 				<h2 class="section-heading">Writing</h2>
-					<p>Things I do out of passion for design, continued learning and self development.</p>
-				<a class ="link link--on-light-bg" href="http://medium.com/@ThatBaldUXGuy" target="b">Read my posts on Medium</a>
+					<p>I won't win the Pulitzer Prize, but writing about design helps me learn by questioning my own beliefs, sharing knowledge and creating dialog.</p>
+				<a class ="link link--on-light-bg" href="http://medium.com/@ThatBaldUXGuy" target="b">Check out my posts on Medium</a>
 			</div>
 		</div>
 		<!-- DESIGN COMMUNITY -->
-		<div class="block block--light block--last-in-section">
-			<div class="block__content">
+		<div class="section section--light section--last-in-section">
+			<div class="section__content">
 				<h2 class="section-heading">Design community</h2>
-					<p>I love sharing ideas and getting involved with the local design community.</p>
+					<p>Design is a team sport. I love sharing ideas, learning about other designers’ process and getting involved with the local design community.</p>
+					<p>I've presented at a number of meetups, and founded the <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">Sarajevo UX meetup group</a>.</p>
 				<a class ="link link--on-light-bg" href="http://www.slideshare.net/ThatBaldUXGuy/presentations" target="_blank">View my presentations on SlideShare</a>
 			</div>
 		</div>
@@ -60,15 +53,14 @@
 
 
 		<!-- FOOTER -->
-		<div class="block block--dark">
-			<div class="block__content">
-				<h2 class="section-heading">Get in touch</h2>				
+		<div class="footer section--dark footer__content">
+			<div class="section__content section__content--allow-wide">
 				<p>
-					<a class ="link link--on-dark-bg" target="_blank" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>
-					<a class ="link link--on-dark-bg" target="_blank" href="https://medium.com/@ThatBaldUXGuy">Medium</a>
-					<a class ="link link--on-dark-bg" target="_blank" href="https://github.com/ThatBaldUXGuy">GitHub</a>
-					<a class ="link link--on-dark-bg" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
-					<a class ="link link--on-dark-bg" href="mailto:vedran.arnautovic@gmail.com">Email</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@ThatBaldUXGuy">Medium</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/ThatBaldUXGuy">GitHub</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
+					<a class ="link link--on-dark-bg link__footer" href="mailto:vedran.arnautovic@gmail.com">Email</a>
 				</p>
 			</div>
 		</div>
