--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 			<!-- INTRO -->
 			<div class="intro">
 				<div class="intro__content">
-					<h1 class="section-heading">Hello, I'm Vedran</h1>
+					<h1 class="section-heading">Hello, I’m Vedran</h1>
 					<p>I am designer.</p>
 					<p>I design digital products and the way people experience them and interact with them.</p>
-					<a class ="link link__about-me" href="about_me.html">More about me</a>
+					<a class ="link link__about-me" href="about_vedran.html">More about me</a>
 				</div>
 			</div>
 		</div>
@@ -27,14 +27,14 @@
 			<div class="section__content">
 				<h2 class="section-heading">My work</h2>
 					<p>Here you will find two things; a collection of case studies focusing on my design process, and side projects I do out of love of design and passion for continued learning and self development.</p>
-				<a class ="link link--on-light-bg" href="my_work.html">View my design work</a>
+				<a class ="link link--on-light-bg" href="vedrans_design_work.html">View my design work</a>
 			</div>
 		</div>
 		<!-- WRITING -->
 		<div class="section section--light">
 			<div class="section__content">
 				<h2 class="section-heading">Writing</h2>
-					<p>I won't win the Pulitzer Prize, but writing about design helps me learn by questioning my own beliefs, sharing knowledge and creating dialog.</p>
+					<p>I won’t win the Pulitzer Prize, but writing about design helps me learn by questioning my own beliefs, sharing knowledge and creating dialog.</p>
 				<a class ="link link--on-light-bg" href="http://medium.com/@ThatBaldUXGuy" target="b">Check out my posts on Medium</a>
 			</div>
 		</div>
@@ -43,7 +43,7 @@
 			<div class="section__content">
 				<h2 class="section-heading">Design community</h2>
 					<p>Design is a team sport. I love sharing ideas, learning about other designers’ process and getting involved with the local design community.</p>
-					<p>I've presented at a number of meetups, and founded the <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">Sarajevo UX meetup group</a>.</p>
+					<p>I’ve presented at a number of meetups, and founded the <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">Sarajevo UX meetup group</a>.</p>
 				<a class ="link link--on-light-bg" href="http://www.slideshare.net/ThatBaldUXGuy/presentations" target="_blank">View my presentations on SlideShare</a>
 			</div>
 		</div>
