Changed the design to a more centred, single column design

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 	</head>	
 	<body>
 		<div class="header">
-			<div class="header__image"></div>
-		
-			<!-- INTRO -->
-			<div class="intro">
-				<div class="intro__content">
-					<h1 class="section-heading">Hello, I’m Vedran</h1>
-					<p>I am designer.</p>
-					<p>I design digital products and the way people experience them and interact with them.</p>
-					<a class ="link link__about-me" href="about_vedran.html">More about me</a>
+			<div class="header__content">
+				<div class="header__image"></div>	
+				<div class="intro">
+					<div class="intro__content">
+						<h1 class="section-heading">Hello, I’m Vedran</h1>
+						<p>I am designer.</p>
+						<p>I design digital products and the way people experience them and interact with them.</p>
+						<a class ="link link__about-me" href="about_vedran.html">More about me</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -26,24 +26,24 @@
 		<div class="section section--light section--first-in-section">
 			<div class="section__content">
 				<h2 class="section-heading">My work</h2>
-					<p>Here you will find two things; a collection of case studies focusing on my design process, and side projects I do out of love of design and passion for continued learning and self development.</p>
-				<a class ="link link--on-light-bg" href="vedrans_design_work.html">View my design work</a>
+					<p class="paragraph__home">Here you will find two things; a collection of case studies focusing on my design process, and side projects I do out of love of design and passion for continued learning and self development.</p>
+				<a class ="link link--on-light-bg" href="vedrans_design_work.html">Explore my design work</a>
 			</div>
 		</div>
 		<!-- WRITING -->
 		<div class="section section--light">
 			<div class="section__content">
 				<h2 class="section-heading">Writing</h2>
-					<p>I won’t win the Pulitzer Prize, but writing about design helps me learn by questioning my own beliefs, sharing knowledge and creating dialog.</p>
-				<a class ="link link--on-light-bg" href="http://medium.com/@ThatBaldUXGuy" target="b">Check out my posts on Medium</a>
+					<p class="paragraph__home">I won’t win the Pulitzer Prize, but writing about design helps me improve by questioning my own beliefs, sharing knowledge and creating dialog.</p>
+				<a class ="link link--on-light-bg" href="http://medium.com/@ThatBaldUXGuy" target="b">Read my posts on Medium</a>
 			</div>
 		</div>
 		<!-- DESIGN COMMUNITY -->
 		<div class="section section--light section--last-in-section">
 			<div class="section__content">
 				<h2 class="section-heading">Design community</h2>
-					<p>Design is a team sport. I love sharing ideas, learning about other designers’ process and getting involved with the local design community.</p>
-					<p>I’ve presented at a number of meetups, and founded the <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">Sarajevo UX meetup group</a>.</p>
+					<p class="paragraph__home">Design is a team sport. I love sharing ideas, learning about other designers’ process and getting involved with the local design community.</p>
+					<p class="paragraph__home">I’ve presented at a number of meetups, and founded the <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">Sarajevo UX meetup group</a>.</p>
 				<a class ="link link--on-light-bg" href="http://www.slideshare.net/ThatBaldUXGuy/presentations" target="_blank">View my presentations on SlideShare</a>
 			</div>
 		</div>
@@ -54,7 +54,7 @@
 
 		<!-- FOOTER -->
 		<div class="footer section--dark footer__content">
-			<div class="section__content section__content--allow-wide">
+			<div class="section__content ">
 				<p>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@ThatBaldUXGuy">Medium</a>
