--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -26,6 +26,20 @@
 					<div class="my-work-item__description">
 					<p>I redesigned the credit card payment form used during job ad posting. </p>
 					<p>The redesign caused a 45% increase in customers paying upfront (rather than by invoice), resulting in a six figure increase in upfront cash flow.</p>
+					<p><a class ="link link--on-light-bg" href="credit_card_payment_form.html">Read case study</a></p>
+					</div>
+			</div>
+		</div>
+		<div class="section section--light">
+			<div class="sub-section__content my-work-item">
+					<h2 class="sub-heading">Visitor registraion iPad app</h2>
+
+					<img class="my-work-item__image" src="/images/credit_card.png" alt="Visitor registration iPad app"/>
+
+					<div class="my-work-item__description">
+					<p>I designed a customisable visitor registration iPad app, specifically for gyms and fitness centres.</p>
+					<p>The app is about to be deployed across 100s of gyms in the US.</p>
+					<p><a class ="link link--on-light-bg" href="visitor_registration_app.html">Read case study</a></p>
 					</div>
 			</div>
 		</div>
