--- a/about_vedran.html
+++ b/about_vedran.html
@@ -10,8 +10,8 @@
 	</head>	
 	<body>
 		<!-- ABOUT ME -->
-		<div class="section section--light">
-			<div class="section__content section__content--allow-wide">
+		<div class="section">
+			<div class="section__content section--first-in-section section--last-in-section">
 				<h1 class="section-heading">About me</h1>
 					<p>I am a designer with over 10 years’ experience, focusing on user experience design, usability and interface design.</p> 
 					<p>I am currently working as a Senior UX Designer at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://seek.com.au">Seek</a>.</p>
@@ -20,7 +20,7 @@
 		</div>
 		<img class="image--full-width" src="/images/vedran_speaking_at_meetup.jpg" alt="Vedran speaking at Sarajevo UX meetup"/>
 
-		<div class="section section--light section__content--allow-wide">
+		<div class="section section--light ">
 			<div class="sub-section__content sub-section--first-in-section">
 					<h2 class="sub-heading">Technical beginnings</h2>
 
@@ -52,7 +52,7 @@
 
 		<!-- FOOTER -->
 		<div class="footer section--dark footer__content">
-			<div class="section__content section__content--allow-wide">
+			<div class="section__content">
 				<p>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@ThatBaldUXGuy">Medium</a>
