--- a/index.html
+++ b/index.html
@@ -9,19 +9,26 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>	
 	<body>
-		<div class="header">
+	<nav class="nav">
+				<ul class="nav__list">
+					<li class="nav__item"><a href="#">Home</a></li>
+					<li class="nav__item"><a href="about_vedran.html">About me</a></li>
+					<li class="nav__item"><a href="vedrans_design_work.html">My work</a></li>
+				</ul>				
+	</nav>
+	<header class="header">
 			<div class="header__content">
 				<div class="header__image"></div>	
 				<div class="intro">
 					<div class="intro__content">
 						<h1 class="section-heading">Hello, I’m Vedran</h1>
-						<p>I am designer.</p>
+						<p>I am a designer.</p>
 						<p>I design digital products and the way people experience them and interact with them.</p>
 						<a class ="link link__about-me" href="about_vedran.html">More about me</a>
 					</div>
 				</div>
 			</div>
-		</div>
+		</header>
 		<!-- MY WORK -->
 		<div class="section section--light section--first-in-section">
 			<div class="section__content">
