First implementation of global nav
Very dumb, repeating the nav code on each page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>	
 	<body>
+	<!-- NAV -->
 	<nav class="nav">
 				<ul class="nav__list">
-					<li class="nav__item"><a href="#">Home</a></li>
+					<li class="nav__item nav__item--selected"><a href="index.html">Home</a></li>
 					<li class="nav__item"><a href="about_vedran.html">About me</a></li>
 					<li class="nav__item"><a href="vedrans_design_work.html">My work</a></li>
 				</ul>				
 	</nav>
+	<!-- HEADER -->
 	<header class="header">
 			<div class="header__content">
 				<div class="header__image"></div>	
@@ -23,7 +25,7 @@
 					<div class="intro__content">
 						<h1 class="section-heading">Hello, I’m Vedran</h1>
 						<p>I am a designer.</p>
-						<p>I design digital products and the way people experience them and interact with them.</p>
+						<p>I design digital products, the way people experience them and interact with them.</p>
 						<a class ="link link__about-me" href="about_vedran.html">More about me</a>
 					</div>
 				</div>
