--- a/about_vedran.html
+++ b/about_vedran.html
@@ -9,6 +9,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>	
 	<body>
+		<!-- NAV -->
+		<nav class="nav nav--on-white-bg">
+					<ul class="nav__list">
+						<li class="nav__item"><a href="index.html">Home</a></li>
+						<li class="nav__item nav__item--selected"><a href="about_vedran.html">About me</a></li>
+						<li class="nav__item"><a href="vedrans_design_work.html">My work</a></li>
+					</ul>				
+		</nav>
 		<!-- ABOUT ME -->
 		<div class="section">
 			<div class="section__content section--first-in-section section--last-in-section">
