happy with the look of the nav for large displays

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>	
 	<body>
 	<!-- NAV -->
-	<nav class="nav">
+	<nav class="nav nav--extra-height">
 				<ul class="nav__list">
 					<li class="nav__item nav__item--selected"><a href="index.html">Home</a></li>
 					<li class="nav__item"><a href="about_vedran.html">About me</a></li>
@@ -25,7 +25,7 @@
 					<div class="intro__content">
 						<h1 class="section-heading">Hello, I’m Vedran</h1>
 						<p>I am a designer.</p>
-						<p>I design digital products, the way people experience them and interact with them.</p>
+						<p>I design digital products, the way people interact with them and experience them.</p>
 						<a class ="link link__about-me" href="about_vedran.html">More about me</a>
 					</div>
 				</div>
