--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -19,7 +19,7 @@
 		</nav>
 		<!-- MY WORK INTRO -->
 		<div class="section section--light">
-			<div class="section__content section__content--allow-wide">
+			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
 				<h1 class="section-heading">My work</h1>
 					<p>I believe that design has more in common with science and engineering than art. Art is subjective, design is not – therefore, it is important for designers to be able to articulate their decisions through a coherent design process.</p> 
 					<p>I aim to do that here by showing you some of my work, including some side projects.</p>
