home page copy tweaks

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="section section--light section--first-in-section">
 			<div class="section__content">
 				<h2 class="section-heading">My work</h2>
-					<p class="paragraph__home">Here you will find two things; a collection of case studies focusing on my design process, and side projects I do out of love of design and passion for continued learning and self development.</p>
+					<p class="paragraph__home">Here you will find a collection of case studies focusing on my design process, as well as side projects I do out of love of design and passion for continued learning and self development.</p>
 				<a class ="link link--on-light-bg" href="vedrans_design_work.html">Explore my design work</a>
 			</div>
 		</div>
@@ -51,9 +51,9 @@
 		<div class="section section--light section--last-in-section">
 			<div class="section__content">
 				<h2 class="section-heading">Design community</h2>
-					<p class="paragraph__home">Design is a team sport. I love sharing ideas, learning about other designers’ process and getting involved with the local design community.</p>
-					<p class="paragraph__home">I’ve presented at a number of meetups, and founded the <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">Sarajevo UX meetup group</a>.</p>
-				<a class ="link link--on-light-bg" href="http://www.slideshare.net/ThatBaldUXGuy/presentations" target="_blank">View my presentations on SlideShare</a>
+					<p class="paragraph__home">I am actively involved in local meetups and love sharing ideas and learning about other designers’ process.</p>
+					<!-- <p class="paragraph__home">I’ve presented at a number of meetups, and founded the <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">Sarajevo UX meetup group</a>.</p> -->
+				<a class ="link link--on-light-bg" href="http://www.slideshare.net/ThatBaldUXGuy/presentations" target="_blank">Browse my presentations</a>
 			</div>
 		</div>
 
