Starting work on the structure for the my work page

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -17,6 +17,7 @@
 						<li class="nav__item nav__item--selected"><a href="vedrans_design_work.html">My work</a></li>
 					</ul>				
 		</nav>
+
 		<!-- MY WORK INTRO -->
 		<div class="section section--light">
 			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
@@ -25,30 +26,83 @@
 					<p>I aim to do that here by showing you some of my work, including some side projects.</p>
 			</div>
 		</div>
-		<div class="section section--medium">
-			<div class="sub-section__content my-work-item">
-					<h2 class="sub-heading">Credit card payment form</h2>
 
-					<img class="my-work-item__image" src="/images/credit_card.png" alt="Credit card form"/>
+		<!-- GYMSALES REGISTRATION APP -->
+		<div class="section section--medium">
+
+			<div class="my-work-item my-work-item--with-ipad">
+			
+					<img class="my-work-item__image--ipad" src="/images/visitor_registration_iPad_app.png" alt="Visitor registration ipad app"/>
+
+
+
+					<div class="my-work-item__description--ipad">
+					<h2 class="section-heading">Visitor registration app</h2>
+					<p>I designed a customisable visitor registration iPad app, specifically for gyms and fitness centres.</p>
+					<p>The app is about to be deployed across 100s of gyms in the US.</p>
+					<p><a class ="link link--on-light-bg" href="visitor_registration_app.html">Read case study</a></p>
+					</div>
+			</div>
+		</div>
+
+		<!-- CREDIT CARD PAYMENT -->
+		<div class="section section--light">
+			<div class="my-work-item my-work-item--with-desktop-browser">
+					<h2 class="section-heading">Credit card payment form</h2>
 
 					<div class="my-work-item__description">
 					<p>I redesigned the credit card payment form used during job ad posting. </p>
 					<p>The redesign caused a 45% increase in customers paying upfront (rather than by invoice), resulting in a six figure increase in upfront cash flow.</p>
 					<p><a class ="link link--on-light-bg" href="credit_card_payment_form.html">Read case study</a></p>
 					</div>
+
+					<img class="my-work-item__image--browser-centred" src="/images/Browser.png" alt="Credit card payment form shown in browser"/>
+
 			</div>
 		</div>
-		<div class="section section--light">
-			<div class="sub-section__content my-work-item">
-					<h2 class="sub-heading">Visitor registraion iPad app</h2>
 
-					<img class="my-work-item__image" src="/images/credit_card.png" alt="Visitor registration iPad app"/>
+		<!-- RUBICON WORKSHOP -->
+		<div class="section">
+
+			<div class="my-work-item my-work-item--with-full-width-image">
+				<div class="my-work-item__description--full-width-image">
+					<h2 class="section-heading text--on-dark-bg">Design workshop and wireframe design</h2>
+					<p class="text--on-dark-bg">I ran a design workshop for a development team in Sarajevo, and their Dutch clients, followed by wireframe designs for the entire product.</p>
+					<p class="text--on-dark-bg">As a result, both the clients and the dev team were involved in the design process and everyone had a clear idea on how to proceed with the implementation.</p>
+					<p><a class ="link link--on-dark-bg" href="rubicon_workshop.html">Read case study</a></p>
+				</div>				
+			</div>
+		</div>
+		
+		<!-- GYM SALES SETTINGS -->
+		<div class="section section--light">
+			<div class="my-work-item my-work-item--with-desktop-browser">
+					<h2 class="section-heading">Design of a settings page</h2>
 
 					<div class="my-work-item__description">
-					<p>I designed a customisable visitor registration iPad app, specifically for gyms and fitness centres.</p>
-					<p>The app is about to be deployed across 100s of gyms in the US.</p>
-					<p><a class ="link link--on-light-bg" href="visitor_registration_app.html">Read case study</a></p>
+					<p>I redesigned an existing, complex, settings page for GymSales.</p>
+					<p>The new design allowed easier comprehension of the complex settings options and allowed for future growth of the page.</p>
+					<p><a class ="link link--on-light-bg" href="gym_sales_settings.html">Read case study</a></p>
 					</div>
+
+					<img class="my-work-item__image--browser-centred" src="/images/Browser.png" alt="Settings page shown within a browser window"/>
+
+			</div>
+		</div>
+
+		<!-- SEEK REGISTRATION -->
+		<div class="section section--medium">
+			<div class="my-work-item my-work-item--with-desktop-browser">
+					<h2 class="section-heading">Design of a repsonsive registration form</h2>
+
+					<div class="my-work-item__description">
+					<p>I designed the registrat</p>
+					<p>The new design allowed registration on mobile devices for the first time, simplifed and sped up the process and resulted in X% in form completion rate</p>
+					<p><a class ="link link--on-light-bg" href="seek_registration_form.html">Read case study</a></p>
+					</div>
+
+					<img class="my-work-item__image--browser-centred" src="/images/Browser.png" alt="Registration form within a browser window"/>
+
 			</div>
 		</div>
 
