fixing up the shadows on the iPad and browser windows

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -91,12 +91,12 @@
 		</div>
 
 		<!-- SEEK REGISTRATION -->
-		<div class="section section--medium">
+		<div class="section section--medium section--on-top">
 			<div class="my-work-item my-work-item--with-desktop-browser">
 					<h2 class="section-heading">Design of a repsonsive registration form</h2>
 
 					<div class="my-work-item__description">
-					<p>I designed the registrat</p>
+					<p>I designed the registration form for employers using the Seek platform.</p>
 					<p>The new design allowed registration on mobile devices for the first time, simplifed and sped up the process and resulted in X% in form completion rate</p>
 					<p><a class ="link link--on-light-bg" href="seek_registration_form.html">Read case study</a></p>
 					</div>
