started work on the first case study details page

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -23,7 +23,7 @@
 			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
 				<h1 class="section-heading">My work</h1>
 					<p>I believe that design has more in common with science and engineering than art. Art is subjective, design is not – therefore, it is important for designers to be able to articulate their decisions through a coherent design process.</p> 
-					<p>I aim to do that here by showing you some of my work, including some side projects.</p>
+					<p>Here is a selection of some of my work, illustrating my design process.</p>
 			</div>
 		</div>
 
@@ -31,17 +31,19 @@
 		<div class="section section--medium">
 
 			<div class="my-work-item my-work-item--with-ipad">
-			
-					<img class="my-work-item__image--ipad" src="/images/visitor_registration_iPad_app.png" alt="Visitor registration ipad app"/>
+
+				<h2 class="section-heading section-heading__with-ipad--vertically-stacked">Visitor registration app</h2>
+		
+				<img class="my-work-item__image--ipad" src="/images/visitor_registration_iPad_app.png" alt="Visitor registration ipad app"/>
 
 
 
-					<div class="my-work-item__description--ipad">
-					<h2 class="section-heading">Visitor registration app</h2>
-					<p>I designed a customisable visitor registration iPad app, specifically for gyms and fitness centres.</p>
-					<p>The app is about to be deployed across 100s of gyms in the US.</p>
-					<p><a class ="link link--on-light-bg" href="visitor_registration_app.html">Read case study</a></p>
-					</div>
+				<div class="my-work-item__description--ipad">
+				<h2 class="section-heading section-heading__with-ipad--side-by-side">Visitor registration app</h2>
+				<p>I designed a customisable visitor registration iPad app, specifically for gyms and fitness centres.</p>
+				<p>The app is about to be deployed across 100s of gyms in the US.</p>
+				<p><a class ="link link--on-light-bg" href="visitor_registration_app.html">Read case study</a></p>
+				</div>
 			</div>
 		</div>
 
@@ -66,8 +68,8 @@
 
 			<div class="my-work-item my-work-item--with-full-width-image">
 				<div class="my-work-item__description--full-width-image">
-					<h2 class="section-heading text--on-dark-bg">Design workshop and wireframe design</h2>
-					<p class="text--on-dark-bg">I ran a design workshop for a development team in Sarajevo, and their Dutch clients, followed by wireframe designs for the entire product.</p>
+					<h2 class="section-heading text--on-dark-bg">Workshop facilitation and wireframe design</h2>
+					<p class="text--on-dark-bg">I ran a two day design workshop for a development team in Sarajevo, and their Dutch clients, followed by wireframe designs for the entire product.</p>
 					<p class="text--on-dark-bg">As a result, both the clients and the dev team were involved in the design process and everyone had a clear idea on how to proceed with the implementation.</p>
 					<p><a class ="link link--on-dark-bg" href="rubicon_workshop.html">Read case study</a></p>
 				</div>				
